<resources>
    <string name="app_name">Lite Baskets</string>
    <string name="search_hint">Search for products, brands and more</string>
    <string name="deliver_to">Deliver to</string>
    <string name="change">Change</string>
    <string name="deals_of_the_day">Deals of the Day</string>
    <string name="best_selling">Best Selling</string>
    <string name="ends_in">Ends in </string>
    <string name="welcome_message">Discover your style</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="top_deals">Top Deals</string>
    <string name="shop_now">Shop Now</string>
    <string name="banner_title">Big Savings on\nTop Brands</string>
    <string name="banner_subtitle">Up to 60% Off</string>

    <!-- No Internet Activity -->
    <string name="no_connection">No Connection</string>
    <string name="no_connection_desc">Please check your internet connection and try again.</string>
    <string name="retry">Try Again</string>
    <string name="still_no_internet">Still no internet connection</string>
    <string name="connect_to_continue">Please connect to the internet to continue</string>
    <string name="no_internet_desc">No Internet Connection</string>

    <!-- Success Activity -->
    <string name="order_placed_success">Order Placed Successfully!</string>
    <string name="order_id_label">Order ID: %1$s</string>
    <string name="success_message">Thank you for shopping with Lite Basket! Your order is being prepared and will be delivered soon.</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="view_order_details">View Order Details</string>
    <string name="loading">Loading&#8230;</string>

    <string-array name="india_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
</resources>